--- a/experiment_1/study_data.ipynb
+++ b/experiment_1/study_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4             0  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        " 'EP_GROUPQ']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "31410             0  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "2147"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,14 +707,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2551853/2638708854.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_520481/2638708854.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] == 1)]\n"
      ]
     },
@@ -906,7 +906,7 @@
        "[239 rows x 8 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -939,23 +939,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2551853/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_520481/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  print(f'Number of Counties with zero H1 count and census tracts {i}: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] == i)])}')\n",
-      "/tmp/ipykernel_2551853/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_520481/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  print(f'Number of Counties with zero H1 count and census tracts {i}: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] == i)])}')\n",
-      "/tmp/ipykernel_2551853/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_520481/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  print(f'Number of Counties with zero H1 count and census tracts {i}: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] == i)])}')\n",
-      "/tmp/ipykernel_2551853/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_520481/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  print(f'Number of Counties with zero H1 count and census tracts {i}: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] == i)])}')\n",
-      "/tmp/ipykernel_2551853/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_520481/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  print(f'Number of Counties with zero H1 count and census tracts {i}: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] == i)])}')\n",
-      "/tmp/ipykernel_2551853/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_520481/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  print(f'Number of Counties with zero H1 count and census tracts {i}: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] == i)])}')\n",
-      "/tmp/ipykernel_2551853/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_520481/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  print(f'Number of Counties with zero H1 count and census tracts {i}: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] == i)])}')\n",
-      "/tmp/ipykernel_2551853/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_520481/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  print(f'Number of Counties with zero H1 count and census tracts {i}: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] == i)])}')\n",
-      "/tmp/ipykernel_2551853/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_520481/3990893891.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  print(f'Number of Counties with zero H1 count and census tracts {i}: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] == i)])}')\n"
      ]
     }
@@ -971,6 +971,45 @@
     "\n",
     "# print(co)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Counties with zero H1 count and census tracts 10 or higher: 286\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_520481/3199370149.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  print(f'Number of Counties with zero H1 count and census tracts {10} or higher: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] >= 10)])}')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Number of Counties with zero H1 count and census tracts {10} or higher: {len(df_temp[(df_temp['H1_count'] == 0) & (df['Census_count'] >= 10)])}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
